fix: sidebar not covering whole page

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -20,13 +20,16 @@
 body, html, div#root, div.home {
   margin: 0px;
   padding: 0px;
-  height: 100%;
-  min-height: 130vh;
+  min-height: 100%;  
   background-color: gainsboro;
 
   /* Diagonals */
   background-size: 7px 7px;
   background-image: repeating-linear-gradient(-45deg, lightgray 0, hsl(from gainsboro h s 80) 1px, gainsboro 0, gainsboro 50%);
+}
+div.home {
+  min-height: 100vh;
+  display: flex;
 }
 .sign-in img.paper-trail-logo {
   width: 150px;
@@ -127,8 +130,8 @@ div.home {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  flex-shrink: 0;
 
-  height: 100%;
   width: 360px;
   box-sizing: border-box;
   overflow: scroll;
